--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -498,7 +498,7 @@ function orderStatus() {
 			str = str +"<tr><td>" +date1+"</td>";
            		 str = str +"<td>"+proname1 +"</td>";
             		str = str +"<td>Completed</td>";
-			 str = str +"<td>"+res_score1+"</td><td> 1 - 100</td> </tr>";
+			 str = str +"<td><a target='_blank' href='./src/res.html'>"+res_score1+"</a></td><td> 1 - 100</td> </tr>";
 			  
 					  });
 			
