--- a/example-smart-app/src/res.html
+++ b/example-smart-app/src/res.html
@@ -62,8 +62,10 @@ Highcharts.chart('ResultDisplay', {
     },
     series: [
          {
-        name: 'PROMIS Bank v1.1 - Pain Interference',
-        data: [0,15, 10, 30, 30, 0, 0, 8,0]
+        name: 'PROMIS Ped Bank v2.0 - Pain Interference',
+        data: [0,15, 10, 30, 30, 0, 0, 8, { marker: {
+                    fillColor: '#FF0000'
+            },y:56.6}]
     }, {
         name: 'PROMIS Bank v2.0 - Physical Function',
         data: [0,20, 15, 8, 11, 5, 33, 0, { marker: {
