--- a/example-smart-app/res.html
+++ b/example-smart-app/res.html
@@ -1,1 +1,93 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">	
+<html>
+<head>
+ 
+ 
 
+
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/series-label.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+
+  <title>PROMIS Results</title>
+ 
+  <style type="text/css">
+   
+  #ResultDisplay {
+	min-width: 310px;
+	max-width: 900px;
+	height: 500px;
+	margin: 0 auto
+}
+	
+	
+	
+  </style>
+  </head>
+  <body>
+  <div id="ResultDisplay">
+  </div>
+  
+  <script>
+  
+  
+Highcharts.chart('ResultDisplay', {
+    title: {
+        text: 'Patient Reported Outcomes'
+    },
+    subtitle: {
+        text: ''
+    },
+    yAxis: {
+	tickInterval: 20,
+        title: {
+            text:'<p style=\" font-sixe: 16px\;\"><b>t-score</b></p>'
+        },
+		min:0,
+		max:100
+    },
+    legend: {
+        layout: 'vertical',
+        align: 'right',
+        verticalAlign: 'middle'
+    },
+    plotOptions: {
+        series: {
+            label: {
+                connectorAllowed: false
+            },
+            pointStart: 2010
+        }
+    },
+    series: [
+         {
+        name: 'PROMIS Ped Bank v2.0 - Pain Interference',
+        data: [0,15, 10, 30, 30, 0, 0, 8, { marker: {
+                    fillColor: '#FF0000'
+            },y:56.6}]
+    }, {
+        name: 'PROMIS Bank v2.0 - Physical Function',
+        data: [0,20, 15, 8, 11, 5, 33, 0, { marker: {
+                    fillColor: '#FF0000'
+            },y:39.5}]
+    }],
+    responsive: {
+        rules: [{
+            condition: {
+                maxWidth: 500
+            },
+            chartOptions: {
+                legend: {
+                    layout: 'horizontal',
+                    align: 'center',
+                    verticalAlign: 'bottom'
+                }
+            }
+        }]
+    }
+});
+  </script>
+  </body>
+  
+ </html>
