--- a/example-smart-app/res.html
+++ b/example-smart-app/res.html
@@ -62,7 +62,7 @@ Highcharts.chart('ResultDisplay', {
     },
     series: [
          {
-        name: 'PROMIS Ped Bank v2.0 - Pain Interference',
+        name: 'PROMIS Bank v1.0 - Pain Interference',
         data: [0,15, 10, 30, 30, 0, 0, 8, { marker: {
                     fillColor: '#FF0000'
             },y:56.6}]
@@ -70,7 +70,7 @@ Highcharts.chart('ResultDisplay', {
         name: 'PROMIS Bank v2.0 - Physical Function',
         data: [0,20, 15, 8, 11, 5, 33, 0, { marker: {
                     fillColor: '#FF0000'
-            },y:39.5}]
+            },y:48.3}]
     }],
     responsive: {
         rules: [{
