--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -434,7 +434,7 @@ function orderStatus() {
 			  
 			  
 				var proname1 = item.resource.code.text;
-			if (proname1.match(/Please/g)!="Please")
+			if (proname1.match(/Please/g)!="Please" && date1!= "10/10/2018, 7:39:24 PM")
 			{
 			str = str +"<tr><td>" +date1+"</td>";
            		str = str +"<td>"+proname1 +"</td>";
