--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -565,6 +565,7 @@ prorecommend();
 				}
 				$.ajax(settings).done(function (response) {
 				  console.log(response);
+				  console.log("start task");	
 				});		
 		}
 		
