--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -536,12 +536,12 @@ prorecommend();
 					console.log(pro_Id);
 					console.log(pro_Name);
 					console.log(pat_Name);
-					console.log(pat_id);					
+					console.log(patID);					
 					
 					taskId = task_Id;
 					proId = pro_Id;
 					proName = pro_Name;
-					patId = pat_id;					
+					patId = patID;					
 					patName = pat_Name;
 				}
 		
