--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -866,7 +866,7 @@ prorecommend();
 						 if (data.DateFinished != '') {
 							 //console.log("Inside");
 							 //console.log(taskId + " " + proId + " " + proName + " " + patId + " " + patName);
-							//completeProcess(taskId,proId,proName,patId,patName);	
+							completeProcess(taskId,proId,proName,patId,patName);	
 							displayScore(assessmentOID);
 							document.getElementById("Content").innerHTML = "You have finished the assessment.<br /> Thank you ! <div style=\'height: 50px\' ><button type=\'button\' class='button button6'  onclick=displist() > Back </button></div>";
 							return
