--- a/example-smart-app/res.html
+++ b/example-smart-app/res.html
@@ -60,18 +60,7 @@ Highcharts.chart('ResultDisplay', {
             pointStart: 2010
         }
     },
-    series: [
-         {
-        name: 'PROMIS Bank v1.0 - Pain Interference',
-        data: [0,15, 10, 30, 30, 0, 0, 8, { marker: {
-                    fillColor: '#FF0000'
-            },y:56.6}]
-    }, {
-        name: 'PROMIS Bank v2.0 - Physical Function',
-        data: [0,20, 15, 8, 11, 5, 33, 0, { marker: {
-                    fillColor: '#FF0000'
-            },y:48.3}]
-    }],
+    series: Series1,
     responsive: {
         rules: [{
             condition: {
