--- a/example-smart-app/res.html
+++ b/example-smart-app/res.html
@@ -30,7 +30,7 @@
   </div>
   
   <script>
-import {Series1} from '.src/js/global.js';	  
+var Series1 = [{name: 'PROMIS Bank v1.0 - Pain Interference',data: [0,15, 10, 30, 30, 0, 0, 8, 56.6]}, {name: 'PROMIS Bank v2.0 - Physical Function',data: [0,20, 15, 8, 11, 5, 33, 0, 48.3]}];
 
   
   
