--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -207,6 +207,12 @@
 
 		
 		
+		function chart() {
+    			var myWindow = window.open("", "MsgWindow", "width=700,height=900");
+    			myWindow.document.write("<p>This is 'MsgWindow'. I am 200px wide and 100px tall!</p>");
+			}
+		
+		
 			function order_func() {
 			
 			var e = document.getElementById("selectform");
@@ -499,7 +505,7 @@ function orderStatus() {
 			str = str +"<tr><td>" +date1+"</td>";
            		 str = str +"<td>"+proname1 +"</td>";
             		str = str +"<td>Completed</td>";
-			 str = str +"<td><a target=\'_blank\' href =\'res.html\' >"+res_score1+"</a></td><td> 1 - 100</td> </tr>";
+			 str = str +"<td><a href =\'#\' onclick=\'chart();return false;\'>"+res_score1+"</a></td><td> 1 - 100</td> </tr>";
 			  
 					  });
 			
