--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -206,10 +206,62 @@
 		var tscore;
 
 		
+
+		
 		
 		function chart() {
     			var myWindow = window.open("", "MsgWindow", "width=700,height=900");
-    			myWindow.document.write("<p>This is 'MsgWindow'. I am 200px wide and 100px tall!</p>");
+    			//myWindow.document.write("<p>This is 'MsgWindow'. I am 200px wide and 100px tall!</p>");
+					var Series1 = [{name: 'PROMIS Bank v1.0 - Pain Interference',data: [0,15, 10, 30, 30, 0, 0, 8, 56.6]}, {name: 'PROMIS Bank v2.0 - Physical Function',data: [0,20, 15, 8, 11, 5, 33, 0, 48.3]}];
+  
+  
+Highcharts.chart('myWindow.document.body', {
+    title: {
+        text: 'Patient Reported Outcomes'
+    },
+    subtitle: {
+        text: ''
+    },
+    yAxis: {
+	tickInterval: 20,
+        title: {
+            text:'<p style=\" font-sixe: 16px\;\"><b>t-score</b></p>'
+        },
+		min:0,
+		max:100
+    },
+    legend: {
+        layout: 'vertical',
+        align: 'right',
+        verticalAlign: 'middle'
+    },
+    plotOptions: {
+        series: {
+            label: {
+                connectorAllowed: false
+            },
+            pointStart: 2010
+        }
+    },
+    series: Series1,
+    responsive: {
+        rules: [{
+            condition: {
+                maxWidth: 500
+            },
+            chartOptions: {
+                legend: {
+                    layout: 'horizontal',
+                    align: 'center',
+                    verticalAlign: 'bottom'
+                }
+            }
+        }]
+    }
+});
+			
+			
+			
 			}
 		
 		
