--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -212,10 +212,11 @@
 		function chart() {
     			var myWindow = window.open("", "MsgWindow", "width=700,height=900");
     			//myWindow.document.write("<p>This is 'MsgWindow'. I am 200px wide and 100px tall!</p>");
-					var Series1 = [{name: 'PROMIS Bank v1.0 - Pain Interference',data: [0,15, 10, 30, 30, 0, 0, 8, 56.6]}, {name: 'PROMIS Bank v2.0 - Physical Function',data: [0,20, 15, 8, 11, 5, 33, 0, 48.3]}];
+var Series1 = [{name: 'PROMIS Bank v1.0 - Pain Interference',data: [0,15, 10, 30, 30, 0, 0, 8, 56.6]}, {name: 'PROMIS Bank v2.0 - Physical Function',data: [0,20, 15, 8, 11, 5, 33, 0, 48.3]}];
   
-  
-Highcharts.chart(myWindow.document.body, {
+  va temp = myWindow.document.getElementById("body");
+			
+Highcharts.chart('myWindow.document.body', {
     title: {
         text: 'Patient Reported Outcomes'
     },
