--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -216,7 +216,7 @@ var Series1 = [{name: 'PROMIS Bank v1.0 - Pain Interference',data: [0,15, 10, 30
   
 
 			
-Highcharts.chart(myWindow.document.getElementById('body'), {
+Highcharts.chart("myWindow.document.getElementById('body')", {
     title: {
         text: 'Patient Reported Outcomes'
     },
