--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="./src/css/SOFCSS.css">
 	<script src='./src/js/global.js'></script>
     	<script src='./src/js/example-smart-app.js'></script>
+	   <script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     	<meta http-equiv='X-UA-Compatible' content='IE=edge' />
     	<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
