--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -213,8 +213,8 @@
 		
 		function chart() {
     			var myWindow = window.open("", "MsgWindow", "width=1400,height=1200");
-    			//myWindow.document.write("<head><title> Patient Reported Outcomes</title> </head>");
- 
+    			//document.write("<head><title> Patient Reported Outcomes</title> </head>");
+ myWindow.document.getElementsByTagName('title') = "PRO Graph";
 			
 Highcharts.chart(myWindow.document.body, {
     title: {
