--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -214,7 +214,7 @@
 		function chart() {
     			var myWindow = window.open("", "MsgWindow", "width=1400,height=1200");
     			//document.write("<head><title> Patient Reported Outcomes</title> </head>");
- myWindow.document.getElementsByTagName('title') = "PRO Graph";
+ myWindow.document.getElementsByTagName('title').innerHTML = "PRO Graph";
 			
 Highcharts.chart(myWindow.document.body, {
     title: {
