--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -545,7 +545,7 @@ function orderStatus() {
 						}
 				    }
 					    
-				if flag !="Y"
+				if (flag !="Y")
 				{
 					let temp ={
 					name  : proname1,
