--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -207,7 +207,7 @@
 		var taskId,proId,proName,patId,patName;	
 		var tscore;
 		
- var Series1 = [{name: 'PROMIS Bank v1.0 - Pain Interference',data: [10.6]}];
+ var Series1 = [];
 		
 		
 
@@ -243,7 +243,7 @@ Highcharts.chart(myWindow.document.body, {
             label: {
                 connectorAllowed: false
             },
-            pointStart: 2010
+            pointStart: 2017
         }
     },
     series: Series1,
