--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -250,7 +250,8 @@ Highcharts.chart(myWindow.document.body, {
     responsive: {
         rules: [{
             condition: {
-                maxWidth: 900
+                maxWidth: 1200,
+		maxHeight: 1000
             },
             chartOptions: {
                 legend: {
