--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -216,9 +216,11 @@
 		function chart() {
     			var myWindow = window.open("", "MsgWindow", "width=1400,height=1200");
     			//document.write("<head><title> Patient Reported Outcomes</title> </head>");
+    			document.write("<div id = 'container' > </div>");
+			
  myWindow.document.getElementsByTagName('title').innerHTML = "PRO Graph";
 			console.log(Series1);
-Highcharts.chart(myWindow.document.body, {
+Highcharts.chart('container', {
     title: {
         text: 'Patient Reported Outcomes'
     },
