--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -216,7 +216,7 @@
 		function chart() {
     			var myWindow = window.open("", "MsgWindow", "width=1400,height=1200");
     			//document.write("<head><title> Patient Reported Outcomes</title> </head>");
-    			document.write("<div id = 'container' > </div>");
+    			myWindow.document.write("<div id = 'container' > </div>");
 			
  myWindow.document.getElementsByTagName('title').innerHTML = "PRO Graph";
 			console.log(Series1);
@@ -228,7 +228,7 @@ Highcharts.chart('container', {
         text: ''
     },
     yAxis: {
-	tickInterval: 5,
+	tickInterval: 10,
         title: {
             text:'<p style=\" font-sixe: 16px\;\"><b>t-score</b></p>'
         },
@@ -252,7 +252,8 @@ Highcharts.chart('container', {
     responsive: {
         rules: [{
             condition: {
-                maxWidth: 900
+                maxWidth: 800,
+		maxHeight: 900,    
             },
             chartOptions: {
                 legend: {
