--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -215,7 +215,7 @@
 		
 		function chart() {
     			var myWindow = window.open("", "MsgWindow", "width=1400,height=1200");
-    			myWindow.document.write("<head><title> Patient Reported Outcomes</title> </head>");
+    			//myWindow.document.write("<head><title> Patient Reported Outcomes</title> </head>");
     			//document.write("<div id = 'container' > </div>");
 			
  myWindow.document.getElementsByTagName('title').innerHTML = "PRO Graph";
