--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -218,7 +218,7 @@
     			//myWindow.document.write("<head><title> Patient Reported Outcomes</title> </head>");
     			//document.write("<div id = 'container' > </div>");
 			
- myWindow.document.getElementsByTagName('title').innerHTML = "PRO Graph";
+ //myWindow.document.getElementsByTagName('title').innerHTML = "PRO Graph";
 			console.log(Series1);
 Highcharts.chart(myWindow.document.body, {
     title: {
