--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -289,7 +289,7 @@ Highcharts.chart(myWindow.document.body, {
 					var settings = {
 					  "async": true,
 					  "crossDomain": true,
-					  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest",
+					  "url": "http://34.219.13.163:9092/cipfhir3/baseDstu3ProcedureRequest",
 					  "method": "POST",
 					  "headers": {
 					    "Content-Type": "application/json",
@@ -455,7 +455,7 @@ function orderStatus() {
   		var settings31 = {
 		  "async": false,
 		  "crossDomain": true,
-		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patID+"&intent=order&status=active",
+		  "url": "http://34.219.13.163:9092/cipfhir3/baseDstu3ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patID+"&intent=order&status=active",
 		  "method": "GET",
 		  "headers": {
 			"Cache-Control": "no-cache"
@@ -496,7 +496,7 @@ function orderStatus() {
 		var settings32 = {
 		  "async": false,
 		  "crossDomain": true,
-		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca/Patient/"+patID+"&intent=order",
+		  "url": "http://34.219.13.163:9092/cipfhir3/baseDstu3ProcedureRequest?subject=https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca/Patient/"+patID+"&intent=order",
 		  "method": "GET",
 		  "headers": {
 		    "Cache-Control": "no-cache"
@@ -515,7 +515,7 @@ function orderStatus() {
 						var settings1 = {
 							  "async": false,
 							  "crossDomain": true,
-							  "url": "http://hapi.fhir.org/baseDstu3/Observation?based-on=ProcedureRequest/"+item.resource.id,
+							  "url": "http://34.219.13.163:9092/cipfhir3/baseDstu3Observation?based-on=ProcedureRequest/"+item.resource.id,
 							  "method": "GET",
 							  "headers": {
 								"Cache-Control": "no-cache"
@@ -642,7 +642,7 @@ prorecommend();
 						var settings = {
 						  "async": true,
 						  "crossDomain": true,
-						  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest/"+taskId,
+						  "url": "http://34.219.13.163:9092/cipfhir3/baseDstu3ProcedureRequest/"+taskId,
 						  "method": "PUT",
 						  "headers": {
 							"Content-Type": "application/json",
@@ -662,7 +662,7 @@ prorecommend();
 			var settings = {
 			  "async": true,
 			  "crossDomain": true,
-			  "url": "http://hapi.fhir.org/baseDstu3/Observation",
+			  "url": "http://34.219.13.163:9092/cipfhir3/baseDstu3Observation",
 			  "method": "POST",
 			  "headers": {
 			    "Content-Type": "application/json",
@@ -690,7 +690,7 @@ prorecommend();
 		var settings3 = {
 		  "async": true,
 		  "crossDomain": true,
-		  "url": "http://hapi.fhir.org/baseDstu3/ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patID+"&intent=order&status=active",
+		  "url": "http://34.219.13.163:9092/cipfhir3/baseDstu3ProcedureRequest?subject=http://hl7.org/fhir/sid/us-ssn/Patient/"+patID+"&intent=order&status=active",
 		  "method": "GET",
 		  "headers": {
 			"Cache-Control": "no-cache"
