--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -203,9 +203,9 @@
 	
 </section>
 	<script>
-		//var baseurl="https://sapphire-demo.meliorix.com/cipfhir3/baseDstu3/";
+		var baseurl="https://sapphire-demo.meliorix.com/cipfhir3/baseDstu3/";
 		 //https://sapphire-demo.meliorix.com/cipfhir3/baseDstu3/ 
-		var baseurl ="http://hapi.fhir.org/baseDstu3/";
+		//var baseurl ="http://hapi.fhir.org/baseDstu3/";
 		var taskId,proId,proName,patId,patName;	
 		var tscore;
 		
