--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -229,8 +229,9 @@
     			var myWindow = window.open("", "MsgWindow", "width=1400,height=1200");
     			//myWindow.document.write("<head><title> Patient Reported Outcomes</title> </head>");
     			//myWindow.document.write("<div id = 'container' > </div>");
-			myWindow.document.body.style.height ="1200px";
-			myWindow.document.body.style.backgroundColor = "pink";
+			myWindow.document.body.style.height ="900px";
+			myWindow.document.body.style.width ="1200px";
+			
  //myWindow.document.getElementsByTagName('title').innerHTML = "PRO Graph";
 			console.log(Series1);
 Highcharts.chart(myWindow.document.body, {
