--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -1034,6 +1034,7 @@ prorecommend();
   
     <!-- Required JS files to enable this page to embed within an MPage -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
+    <script src='./src/js/polyfill.js'></script>
     <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
 
    
@@ -1044,7 +1045,9 @@ prorecommend();
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    
+
+	<script src='./src/js/ajax_jquery.js'></script>
     <script>
       extractData().then(
         //Display Patient Demographics and Observations if extractData was success
