--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" hidden>
   <head>
-	  <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+	  <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge' />-->
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  	   <!-- Application-level javascript-->
 	<link rel="stylesheet" href="./src/css/SOFCSS.css">
 	
