--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -13,6 +13,11 @@
 	<script src='./src/js/hc_exporting.js'></script>
 	<script src='./src/js/jquery_min.js'></script>
 	<script src='./src/js/bootstrap_min.js'></script>
+	
+	  <script src='./src/js/jQuery.XDomainRequest.js'></script>
+	<script src='./src/js/jquery.xdomainrequest.min.js'></script>
+	  
+	  
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
