--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -479,7 +479,7 @@ function orderStatus() {
 		  "cache" : false,
 		  "method": "GET",
 		  "headers": {
-			//"Cache-Control": "no-cache"
+			"Cache-Control": "no-cache"
 		  }
 		}
 		$.ajax(settings31).done(function (response) {
@@ -521,7 +521,7 @@ function orderStatus() {
 		  "cache" : false,
 			"method": "GET",
 		  "headers": {
-		   // "Cache-Control": "no-cache"
+		   "Cache-Control": "no-cache"
 		  }
 		}
 		$.ajax(settings32).done(function (response) {
@@ -541,7 +541,7 @@ function orderStatus() {
 							"cache" : false,  
 							"method": "GET",
 							  "headers": {
-							//	"Cache-Control": "no-cache"
+								"Cache-Control": "no-cache"
 							  }
 							}
 							$.ajax(settings1).done(function (response) {
@@ -648,7 +648,7 @@ prorecommend();
 				  "method": "POST",
 				  "headers": {
 					"userId": patID,
-					//"Cache-Control": "no-cache",
+					"Cache-Control": "no-cache",
 					"Postman-Token": "db0f09f2-afff-45ff-9a20-1d2d05bea38c"
 				  }
 				}
@@ -668,7 +668,7 @@ prorecommend();
 						  "method": "PUT",
 						  "headers": {
 							"Content-Type": "application/json",
-							//"Cache-Control": "no-cache"
+							"Cache-Control": "no-cache"
 						  },
 						  "processData": false,
 						  "data": "{\n\t\"resourceType\": \"ProcedureRequest\",\n\t\"id\": \""+taskId+"\",\n\t\"status\": \"completed\",\n\t\"intent\": \"order\",\n\t\"category\": [{\n\t\t\"coding\": [{\n\t\t\t\"system\": \"http://snomed.info/sct\",\n\t\t\t\"code\": \"386053000\",\n\t\t\t\"display\": \"Evaluation procedure (procedure)\"\n\t\t}],\n\t\t\"text\": \"Evaluation\"\n\t}],\n\t\"code\": {\n\t\t\"coding\": [{\n\t\t\t\"system\": \"http://loinc.org\",\n\t\t\t\"code\": \""+proId+"\",\n\t\t\t\"display\": \""+proName+"\"\n\t\t}],\n\t\t\"text\": \""+proName+"\"\n\t},\n\t\"occurrenceDateTime\": \""+date1+"\",\n\t\"subject\": {\n\t\t\"display\": \""+patName+"\",\n        \"reference\": \"https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca/Patient/"+patId+"\"\n\t}\n} \n"
@@ -688,7 +688,7 @@ prorecommend();
 			  "method": "POST",
 			  "headers": {
 			    "Content-Type": "application/json",
-			    //"Cache-Control": "no-cache"
+			    "Cache-Control": "no-cache"
 			  },
 			  "processData": false,
 			  "data": "{\n\t\"resourceType\": \"Observation\",\n\t\"status\": \"final\",\n\t\"code\": {\n    \t\"coding\": [\n    \t\t{\n        \t\t\"system\": \"http://loinc.org\",\n\t\t        \"code\": \"77580-9\",\n\t\t        \"display\": \""+proName+" T-score\"\n    \t\t}\n    \t]\n\t},\n\t\"category\": [{\n    \t\"coding\": [{\n        \t\"system\": \"http://hl7.org/fhir/observation-category\",\n        \t\"code\": \"survey\",\n        \t\"display\": \"Survey\"\n        }]\n    }],\n\t\"subject\": {\n\t\t\"display\": \""+patName+"\",\n        \"reference\": \"https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca/Patient/"+patId+"\"\n\t},\n\t\"effectiveDateTime\": \""+date1+"\",\n\t\"issued\": \""+date1+"\",\n\t\"performer\": [\n    \t{\n\t\t\t\"display\": \""+patName+"\",\n        \t\"reference\": \"https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca/Patient/"+patId+"\"\n\t    }\n\t],\n\t\"valueQuantity\": {\n    \t\"value\": "+tscore+"\n     \n\t},\n\n\t\"basedOn\":\t{\n\t\t\"reference\": \"ProcedureRequest/"+taskId+"\"\n\t}\n} \n"
