bug fixes of index.html

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -59,7 +59,7 @@
 		<div id="includeDoctorView"></div>
 </section>
 
-<section hidden id = "doctor-view">
+<section hidden id = "patient-view">
 		<div id="includePatientView"></div>
 </section>
 
