--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="./src/css/SOFCSS.css">
 
     	<script src='./src/js/example-smart-app.js'></script>
-	<script src='./src/js/highchart.js'></script>
+	<script src='./src/js/highcharts.js'></script>
+	<script src='./src/js/highcharts-more.js'></script>
 	<script src='./src/js/hc_exporting.js'></script>
 	<script src='./src/js/jquery_min.js'></script>
 	<script src='./src/js/bootstrap_min.js'></script>
