--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./src/css/SOFCSS.css">
 
     	<script src='./src/js/example-smart-app.js'></script>
-	<script src='./src/js/highcharts.js'></script>
+	<script src='https://code.highcharts.com/6/highcharts.js'></script>
 	<script src='./src/js/highcharts-more.js'></script>
 	<script src='./src/js/hc_exporting.js'></script>
 	<script src='./src/js/jquery_min.js'></script>
