--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -27,6 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '1a770187-feff-417b-9a99-aedbb4864f88',
+	'redirect_uri': 'https://gayathrinagaraj.github.io/smart-on-fhir/example-smart-app/src/views/patient/index.html',
         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
       });
     </script>
