--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -27,7 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'aba286bc-5848-435d-ac1d-ec6b81413e0e',
- 	'redirect_uri': 'https://localhost/smart-on-fhir/example-smart-app/src/views/provider/index.html',
+ 	'redirect_uri': 'https://gayathrinagaraj.github.io/smart-on-fhir/example-smart-app/src/views/provider/index.html',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
