--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
     <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="images/navbar.png" />
+        <img src="images/navbar.png" alt="Image for nav bar" />
       </span>
     </a>
     <div class="tocify-wrapper">
-      <img src="images/logo.png" />
+      <img src="images/logo.png" alt="Image for logo"/>
         <div class="lang-selector">
               <a href="#" data-language-name="code">code</a>
         </div>
